--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "nexus",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.4.0",
     "morgan": "~1.9.1"
   }
 }
