--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^8.4.0",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
